// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a panel 1`] = `
<div
  className="panel  card"
  footer={null}
  header={null}
  style={
    Object {
      "height": undefined,
    }
  }
>
  <div
    className="card-body"
    style={
      Object {
        "display": null,
      }
    }
  >
    <p>
      Lorem ipsum...
    </p>
  </div>
</div>
`;

exports[`renders a panel with a heading 1`] = `
<div
  className="panel  card"
  footer={null}
  header="Title"
  style={
    Object {
      "height": undefined,
    }
  }
>
  <h3
    className="card-header"
  >
    <span
      className="unselectable"
    >
      Title
    </span>
    <span
      className="sk-cube-grid"
    >
      <span
        className="sk-cube sk-cube1"
      />
      <span
        className="sk-cube sk-cube2"
      />
      <span
        className="sk-cube sk-cube3"
      />
      <span
        className="sk-cube sk-cube4"
      />
      <span
        className="sk-cube sk-cube5"
      />
      <span
        className="sk-cube sk-cube6"
      />
      <span
        className="sk-cube sk-cube7"
      />
      <span
        className="sk-cube sk-cube8"
      />
      <span
        className="sk-cube sk-cube9"
      />
    </span>
  </h3>
  <div
    className="card-body"
    style={
      Object {
        "display": null,
      }
    }
  >
    <p>
      Lorem ipsum...
    </p>
  </div>
</div>
`;
